增加了css的美化

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GITHUB 練習</title>
+    <style>
+        * {
+            background-color: aliceblue;
+            color: azure text-align;
+            center;
+
+        }
+
+        table {
+            border: 1px solid red;
+            pading: 20px;
+            
+        }
+
+        td {
+            border:1px solid yellow;
+            padding: 5px 10px 15px 20px;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,8 +35,8 @@
             <td>丙</td>
         </tr>
         </tr>
-        
-    <img src="https://i.imgur.com/V9TJBkR.jpeg" alt="Trulli" width="500" height="500">
+
+        <img src="https://i.imgur.com/V9TJBkR.jpeg" alt="Trulli" width="500" height="500">
         </tr>
     </table>
 </body>
