--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>GITHUB 練習</title>
     <style>
         * {
-            background-color: aliceblue;
+            background-color: rgb(160, 202, 240);
             color: azure text-align;
             center;
 
         }
 
         table {
-            border: 1px solid red;
+            border: 1px solid rgb(94, 28, 28);
             pading: 20px;
             
         }
 
         td {
-            border:1px solid yellow;
+            border:1px solid rgb(121, 121, 72);
             padding: 5px 10px 15px 20px;
         }
     </style>
